[package]
name = "cocomo"
version = "0.5.0"
edition = "2021"
description = "COCOMO (Constructive Cost Model) CLI utility and library"
repository = "https://github.com/qtfkwk/cocomo"
keywords = [ "loc", "sloc", "cloc", "scc", "tokei" ]
license = "MIT"

[dependencies]
clap = { version = "4.3.5", features = ["derive", "wrap_help"] }
tokei = "12.1.2"
