[package]
name = "cocomo"
version = "0.10.0"
edition = "2021"
description = "COCOMO (Constructive Cost Model) CLI utility and library"
repository = "https://github.com/qtfkwk/cocomo"
keywords = [ "loc", "sloc", "cloc", "scc", "tokei" ]
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
clap-cargo = "0.14.1"
format_num = "0.1.0"
lazy_static = "1.5.0"
tokei = "12.1.2"
